--- a/Tabang-Hub/Tabang-Hub/Views/Organization/EventsManagement.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Organization/EventsManagement.cshtml
@@ -174,14 +174,14 @@
                             @foreach (var list in Model.listOfEvents)
                             {
                                 <tr class="text-center" data-href="@Url.Action("Details", "Organization", new { id = list.Event_Id })" style="cursor: pointer;">
-                                    <td>@list.Title</td>
-                                    <td>@list.Description</td>
+                                    <td>@list.Event_Title</td>
+                                    <td>@list.Event_Description</td>
                                     <td>@list.Maximum_Volunteer</td>
                                     <td>@list.Date_Started</td>
                                     <td>@list.Date_Ended</td>
                                     <td>@list.Location</td>
-                                    <td>@list.Image_Id</td>
-                                    <td>@list.Skill_Id</td>
+                                    <td>@list.Total_Image</td>
+                                    <td>@list.Total_Skills</td>
                                     <td>
                                         <a href="@Url.Action("Delete", "Event", new { id = list.Event_Id })" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this event?');">Delete</a>
                                     </td>
