--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Admin.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Admin.cshtml
@@ -19,10 +19,8 @@
     <link rel="stylesheet" href="~/Content/vendors/bootstrap-icons/bootstrap-icons.css">
     <link rel="stylesheet" href="~/Content/css1/app.css">
     <link rel="shortcut icon" href="~/Content/images1/favicon.svg" type="image/x-icon">
-
 </head>
 <body>
-
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-xxl">
             <a href="/" class="navbar-brand">
@@ -57,18 +55,48 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="@Url.Content("~/Content/images/tabanghub3.png")" class="rounded-circle" alt="Profile" width="30" height="30">
+                    <li class="nav-item dropdown me-3">
+                        <a class="nav-link active dropdown-toggle" href="#" id="notificationBell" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            <i class='bi bi-bell bi-sub fs-4 text-gray-600'></i>
+                            <span id="notificationCount" class="badge rounded-pill bg-danger" style="display: none;">0</span>
                         </a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-                            <li><a class="dropdown-item" href="~/Organization/OrgProfile">View Profile</a></li>
-                            <li><a class="dropdown-item" href="~/Organization/Settings">Settings</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="~/Page/Logout">Logout</a></li>
+                        <ul class="dropdown-menu dropdown-menu-end" id="notificationDropdown" aria-labelledby="notificationBell">
+                            <li>
+                                <h6 class="dropdown-header">Notifications</h6>
+                            </li>
+                            <li><a class="dropdown-item">No new notifications</a></li>
                         </ul>
                     </li>
                 </ul>
+                <div class="dropdown">
+                    <a href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                        <div class="user-menu d-flex">
+                            <div class="user-name text-end me-3">
+                                <h6 class="mb-0 text-gray-600">Admin</h6>
+                                <p class="mb-0 text-sm text-gray-600">Admin</p>
+                            </div>
+                            <div class="user-img d-flex align-items-center">
+                                <div class="avatar avatar-md">
+                                        <img src="~/Content/IdPicture/programming 1.jpg" />
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+                        <li>
+                            <h6 class="dropdown-header">Hello, Admin</h6>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="~/Page/Logout">
+                                <i class="icon-mid bi bi-box-arrow-left me-2"></i> Logout
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
@@ -80,8 +108,6 @@
 
     <script src="~/Content/vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
     <script src="~/Content/js1/bootstrap.bundle.min.js"></script>
-
     <script src="~/Content/js1/main.js"></script>
-
 </body>
 </html>
